--- a/roster.html
+++ b/roster.html
@@ -16,11 +16,11 @@
 <tr><td>BAL</td><td>Devonta Freeman        </td></tr>
 <tr><td>HOU</td><td>David Johnson          </td></tr>
 <tr><td>TEN</td><td>Dontrell Hilliard      </td></tr>
+<tr><td>ARI</td><td>Chase Edmonds          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
-<tr><td>DEN</td><td>Jerry Jeudy            </td></tr>
 <tr><td> NE</td><td>Kendrick Bourne        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
@@ -159,7 +159,7 @@
 <tr><td>SEA</td><td>Alex Collins           </td></tr>
 <tr><td>PHI</td><td>Jordan Howard          </td></tr>
 <tr><td>TEN</td><td>D'Onta Foreman         </td></tr>
-<tr><td> LV</td><td>Kenyan Drake           </td></tr>
+<tr><td>SEA</td><td>Rashaad Penny          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
