--- a/pickups.html
+++ b/pickups.html
@@ -42,8 +42,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Chase Edmonds/Jerry Jeudy</td>
+<td width=50>12/14</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -355,7 +355,8 @@ Team 6  - Tyrod Taylor/Chris Carson (11/23)<br>
 Team 1  - Kendrick Bourne/Christian McCaffrey (11/30)<br>
 Team 1  - Dontrell Hilliard/Joey Slye (12/7)<br>
 Team 3  - Dalton Schultz/Quinn Nordin (12/9)<br>
-Team 8  - Jeff Wilson/Corey Davis (12/12)
+Team 8  - Jeff Wilson/Corey Davis (12/12)<br>
+Team 6  - Rashaad Penny/Kenyan Drake (12/13)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
