--- a/pickups.html
+++ b/pickups.html
@@ -227,8 +227,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Van Jefferson/Noah Fant</td>
+<td width=50>12/16</td>
 </tr></table></td>
 </tr>
 <tr>
