--- a/roster.html
+++ b/roster.html
@@ -220,9 +220,9 @@
 <tr><td>CHI</td><td>Allen Robinson         </td></tr>
 <tr><td>BAL</td><td>Marquise Brown         </td></tr>
 <tr><td>CHI</td><td>Darnell Mooney         </td></tr>
+<tr><td>LAR</td><td>Van Jefferson          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
-<tr><td>DEN</td><td>Noah Fant              </td></tr>
 <tr><td> LV</td><td>Darren Waller          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
