--- a/week15.html
+++ b/week15.html
@@ -66,13 +66,13 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (3)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
 <tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Renfrow</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
+<tr><td>Folk</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -81,10 +81,10 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (6)</b></font></td></tr>
 <tr><td>RWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Michel</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Claypool</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Penny</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Foreman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Claypool</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Joseph</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
