--- a/week15.html
+++ b/week15.html
@@ -111,9 +111,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
 <tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>JWilson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Carter</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Mooney</td>        <td></td><td align=right>0</td></tr>
+<tr><td>VJefferson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Lawrence</td>      <td></td><td align=right>0</td></tr>
@@ -146,7 +146,7 @@
 <tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 <td></td><td></td>
