--- a/week15.html
+++ b/week15.html
@@ -28,7 +28,7 @@
 <tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Higbee</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Lance</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
