--- a/roster.html
+++ b/roster.html
@@ -187,6 +187,7 @@
 <tr><td>ATL</td><td>Cordarrelle Patterson  </td></tr>
 <tr><td>NYG</td><td>Devontae Booker        </td></tr>
 <tr><td>TEN</td><td>Jeremy McNichols       </td></tr>
+<tr><td> TB</td><td>Le'Veon Bell           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Amari Cooper           </td></tr>
 <tr><td>LAR</td><td>Odell Beckham          </td></tr>
@@ -199,7 +200,6 @@
 <tr><td> KC</td><td>Harrison Butker        </td></tr>
 <tr><td>DAL</td><td>Greg Zuerlein          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td> SF</td><td>Trey Sermon            </td></tr>
 <tr><td>ATL</td><td>Kyle Pitts             </td></tr>
 <tr><td>PHI</td><td>DeVonta Smith          </td></tr>
 </table>
