--- a/pickups.html
+++ b/pickups.html
@@ -356,7 +356,8 @@ Team 1  - Kendrick Bourne/Christian McCaffrey (11/30)<br>
 Team 1  - Dontrell Hilliard/Joey Slye (12/7)<br>
 Team 3  - Dalton Schultz/Quinn Nordin (12/9)<br>
 Team 8  - Jeff Wilson/Corey Davis (12/12)<br>
-Team 6  - Rashaad Penny/Kenyan Drake (12/13)
+Team 6  - Rashaad Penny/Kenyan Drake (12/13)<br>
+Team 7  - Le'Veon Bell/Trey Sermon (12/21)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
