--- a/pickups.html
+++ b/pickups.html
@@ -357,7 +357,8 @@ Team 1  - Dontrell Hilliard/Joey Slye (12/7)<br>
 Team 3  - Dalton Schultz/Quinn Nordin (12/9)<br>
 Team 8  - Jeff Wilson/Corey Davis (12/12)<br>
 Team 6  - Rashaad Penny/Kenyan Drake (12/13)<br>
-Team 7  - Le'Veon Bell/Trey Sermon (12/21)
+Team 7  - Le'Veon Bell/Trey Sermon (12/21)<br>
+Team 8  - Russell Gage/Allen Robinson (12/22)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
