--- a/roster.html
+++ b/roster.html
@@ -217,10 +217,10 @@
 <tr><td> SF</td><td>Jeff Wilson            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
-<tr><td>CHI</td><td>Allen Robinson         </td></tr>
 <tr><td>BAL</td><td>Marquise Brown         </td></tr>
 <tr><td>CHI</td><td>Darnell Mooney         </td></tr>
 <tr><td>LAR</td><td>Van Jefferson          </td></tr>
+<tr><td>ATL</td><td>Russell Gage           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td> LV</td><td>Darren Waller          </td></tr>
