--- a/roster.html
+++ b/roster.html
@@ -250,7 +250,6 @@
 <tr><td>HOU</td><td>Brandin Cooks          </td></tr>
 <tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>DET</td><td>TJ Hockenson           </td></tr>
 <tr><td>LAR</td><td>Tyler Higbee           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Matt Gay               </td></tr>
@@ -258,6 +257,7 @@
 <tr><td> SF</td><td>Trey Lance             </td></tr>
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
 <tr><td>NYJ</td><td>Matt Ammendola         </td></tr>
+<tr><td> NO</td><td>Ian Book               </td></tr>
 </table>
 </td>
 </tr>
