--- a/pickups.html
+++ b/pickups.html
@@ -358,7 +358,8 @@ Team 3  - Dalton Schultz/Quinn Nordin (12/9)<br>
 Team 8  - Jeff Wilson/Corey Davis (12/12)<br>
 Team 6  - Rashaad Penny/Kenyan Drake (12/13)<br>
 Team 7  - Le'Veon Bell/Trey Sermon (12/21)<br>
-Team 8  - Russell Gage/Allen Robinson (12/22)
+Team 8  - Russell Gage/Allen Robinson (12/22)<br>
+Team 9  - Ian Book/TJ Hockenson (12/23)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
