--- a/week16.html
+++ b/week16.html
@@ -95,9 +95,9 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (6)</b></font></td></tr>
-<tr><td>RWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Penny</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Huntley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Foreman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Claypool</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
@@ -109,11 +109,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Callaway</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fields</td>        <td></td><td align=right>0</td></tr>
