--- a/roster.html
+++ b/roster.html
@@ -188,6 +188,7 @@
 <tr><td>NYG</td><td>Devontae Booker        </td></tr>
 <tr><td>TEN</td><td>Jeremy McNichols       </td></tr>
 <tr><td> TB</td><td>Le'Veon Bell           </td></tr>
+<tr><td>LAC</td><td>Justin Jackson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Amari Cooper           </td></tr>
 <tr><td>LAR</td><td>Odell Beckham          </td></tr>
@@ -197,7 +198,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Dawson Knox            </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td> KC</td><td>Harrison Butker        </td></tr>
 <tr><td>DAL</td><td>Greg Zuerlein          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Kyle Pitts             </td></tr>
