--- a/pickups.html
+++ b/pickups.html
@@ -360,7 +360,8 @@ Team 6  - Rashaad Penny/Kenyan Drake (12/13)<br>
 Team 7  - Le'Veon Bell/Trey Sermon (12/21)<br>
 Team 8  - Russell Gage/Allen Robinson (12/22)<br>
 Team 9  - Ian Book/TJ Hockenson (12/23)<br>
-Team 7  - Justin Jackson/Harrison Butker (12/24)
+Team 7  - Justin Jackson/Harrison Butker (12/24)<br>
+Team 10 - Gabriel Davis/DeAndre Hopkins (12/26)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
