--- a/roster.html
+++ b/roster.html
@@ -275,10 +275,10 @@
 <tr><td>IND</td><td>Nyheim Hines           </td></tr>
 <tr><td>PHI</td><td>Miles Sanders          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>ARI</td><td>DeAndre Hopkins        </td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td>CAR</td><td>DJ Moore               </td></tr>
 <tr><td> NO</td><td>Marquez Callaway       </td></tr>
+<tr><td>BUF</td><td>Gabriel Davis          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td height=9></td><td></td></tr>
