--- a/week16.html
+++ b/week16.html
@@ -10,11 +10,11 @@
 <tr><td>KMurray</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Freeman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Edmonds</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>THiggins</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Bourne</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Prater</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Mills</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -95,7 +95,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (6)</b></font></td></tr>
-<tr><td>Huntley</td>       <td></td><td align=right>0</td></tr>
+<tr><td>RWilson</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Foreman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
@@ -113,7 +113,7 @@
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Callaway</td>      <td></td><td align=right>0</td></tr>
+<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
@@ -127,7 +127,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
 <tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Carter</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Gage</td>          <td></td><td align=right>0</td></tr>
 <tr><td>VJefferson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
