--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 <a href="week13.html"><b>13</b></a>
 <a href="week14.html"><b>14</b></a>
 <a href="week15.html"><b>15</b></a>
-<a href="week16.html"><b>16P</b></a><br>
+<a href="week16.html"><b>16</b></a>
+<a href="week17.html"><b>17P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -74,42 +75,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Sam(9)</font></td>
-    <td><font size=2>10</font></td>
+    <td><font size=2>11</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>10695</font></td>
-    <td><font size=2>8450</font></td>
+    <td><font size=2>11460</font></td>
+    <td><font size=2>9010</font></td>
     <td><font size=2>1300</font></td>
     <td><font size=2>395</font></td>
-    <td><font size=2>3</font></td>
-<tr><td><font size=2>Roger(7)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9400</font></td>
-    <td><font size=2>9010</font></td>
-    <td><font size=2>1325</font></td>
-    <td><font size=2>135</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>4</font></td>
 <tr><td><font size=2>Matthew(1)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9365</font></td>
-    <td><font size=2>8785</font></td>
+    <td><font size=2>10100</font></td>
+    <td><font size=2>9440</font></td>
     <td><font size=2>1360</font></td>
     <td><font size=2>220</font></td>
     <td><font size=2>2</font></td>
+<tr><td><font size=2>Roger(7)</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>10095</font></td>
+    <td><font size=2>9770</font></td>
+    <td><font size=2>1325</font></td>
+    <td><font size=2>135</font></td>
+    <td><font size=2>2</font></td>
 <tr><td><font size=2>Mike(5)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>8405</font></td>
-    <td><font size=2>10210</font></td>
+    <td><font size=2>11</font></td>
+    <td><font size=2>9060</font></td>
+    <td><font size=2>10945</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>325</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(3)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>12</font></td>
-    <td><font size=2>8245</font></td>
-    <td><font size=2>10400</font></td>
+    <td><font size=2>9005</font></td>
+    <td><font size=2>11095</font></td>
     <td><font size=2>910</font></td>
     <td><font size=2>360</font></td>
     <td><font size=2>0</font></td>
@@ -121,46 +122,46 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>11</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>9545</font></td>
-    <td><font size=2>7770</font></td>
-    <td><font size=2>1065</font></td>
-    <td><font size=2>360</font></td>
-    <td><font size=2>3</font></td>
 <tr><td><font size=2>Grant(4)</font></td>
-    <td><font size=2>10</font></td>
+    <td><font size=2>11</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>10230</font></td>
-    <td><font size=2>9280</font></td>
+    <td><font size=2>10850</font></td>
+    <td><font size=2>9810</font></td>
     <td><font size=2>895</font></td>
     <td><font size=2>400</font></td>
     <td><font size=2>1</font></td>
+<tr><td><font size=2>John(10)</font></td>
+    <td><font size=2>11</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>9935</font></td>
+    <td><font size=2>8330</font></td>
+    <td><font size=2>1065</font></td>
+    <td><font size=2>360</font></td>
+    <td><font size=2>3</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>10320</font></td>
-    <td><font size=2>9385</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>10850</font></td>
+    <td><font size=2>10005</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>305</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>9140</font></td>
-    <td><font size=2>9890</font></td>
-    <td><font size=2>830</font></td>
-    <td><font size=2>250</font></td>
-    <td><font size=2>2</font></td>
 <tr><td><font size=2>States(6)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>7400</font></td>
-    <td><font size=2>9565</font></td>
+    <td><font size=2>7960</font></td>
+    <td><font size=2>9955</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>150</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Randy(8)</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>10</font></td>
+    <td><font size=2>9700</font></td>
+    <td><font size=2>10655</font></td>
+    <td><font size=2>830</font></td>
+    <td><font size=2>250</font></td>
+    <td><font size=2>2</font></td>
 </table>
 </table>
 </body>
