--- a/week17.html
+++ b/week17.html
@@ -25,7 +25,7 @@
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
+<tr><td>GDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
@@ -142,7 +142,7 @@
 <tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gage</td>          <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>VJefferson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
