--- a/pickups.html
+++ b/pickups.html
@@ -163,8 +163,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Sean Mannion/Tommy Sweeney</td>
+<td width=50>1/2</td>
 </tr></table></td>
 </tr>
 <tr>
