--- a/roster.html
+++ b/roster.html
@@ -152,6 +152,7 @@
 <tr><td>SEA</td><td>Russell Wilson         </td></tr>
 <tr><td>BAL</td><td>Tyler Huntley          </td></tr>
 <tr><td>HOU</td><td>Tyrod Taylor           </td></tr>
+<tr><td>MIN</td><td>Sean Mannion           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Josh Jacobs            </td></tr>
 <tr><td>ATL</td><td>Mike Davis             </td></tr>
@@ -166,7 +167,6 @@
 <tr><td>PIT</td><td>Chase Claypool         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
-<tr><td>BUF</td><td>Tommy Sweeney          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Greg Joseph            </td></tr>
 <tr><td height=9></td><td></td></tr>
