--- a/week17.html
+++ b/week17.html
@@ -38,7 +38,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (4)</b></font></td></tr>
 <tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
+<tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
@@ -109,11 +109,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (6)</b></font></td></tr>
-<tr><td>RWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Foreman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mannion</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Foreman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Claypool</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Pittman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Joseph</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
@@ -126,13 +126,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (7)</b></font></td></tr>
 <tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Patterson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>JJackson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Beckham</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
