--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 <a href="week14.html"><b>14</b></a>
 <a href="week15.html"><b>15</b></a>
 <a href="week16.html"><b>16</b></a>
-<a href="week17.html"><b>17P</b></a><br>
+<a href="week17.html"><b>17</b></a>
+<a href="week18.html"><b>18P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -77,7 +78,7 @@
 <tr><td><font size=2>Sam(9)</font></td>
     <td><font size=2>11</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>11460</font></td>
+    <td><font size=2>12275</font></td>
     <td><font size=2>9010</font></td>
     <td><font size=2>1300</font></td>
     <td><font size=2>395</font></td>
@@ -85,7 +86,7 @@
 <tr><td><font size=2>Matthew(1)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10100</font></td>
+    <td><font size=2>10730</font></td>
     <td><font size=2>9440</font></td>
     <td><font size=2>1360</font></td>
     <td><font size=2>220</font></td>
@@ -93,7 +94,7 @@
 <tr><td><font size=2>Roger(7)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>10095</font></td>
+    <td><font size=2>10455</font></td>
     <td><font size=2>9770</font></td>
     <td><font size=2>1325</font></td>
     <td><font size=2>135</font></td>
@@ -101,7 +102,7 @@
 <tr><td><font size=2>Mike(5)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>9060</font></td>
+    <td><font size=2>9710</font></td>
     <td><font size=2>10945</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>325</font></td>
@@ -109,11 +110,11 @@
 <tr><td><font size=2>Steven(3)</font></td>
     <td><font size=2>4</font></td>
     <td><font size=2>12</font></td>
-    <td><font size=2>9005</font></td>
+    <td><font size=2>10050</font></td>
     <td><font size=2>11095</font></td>
-    <td><font size=2>910</font></td>
+    <td><font size=2>1045</font></td>
     <td><font size=2>360</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -125,7 +126,7 @@
 <tr><td><font size=2>Grant(4)</font></td>
     <td><font size=2>11</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>10850</font></td>
+    <td><font size=2>11530</font></td>
     <td><font size=2>9810</font></td>
     <td><font size=2>895</font></td>
     <td><font size=2>400</font></td>
@@ -133,7 +134,7 @@
 <tr><td><font size=2>John(10)</font></td>
     <td><font size=2>11</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>9935</font></td>
+    <td><font size=2>10350</font></td>
     <td><font size=2>8330</font></td>
     <td><font size=2>1065</font></td>
     <td><font size=2>360</font></td>
@@ -141,7 +142,7 @@
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>10850</font></td>
+    <td><font size=2>11795</font></td>
     <td><font size=2>10005</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>305</font></td>
@@ -149,7 +150,7 @@
 <tr><td><font size=2>States(6)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>7960</font></td>
+    <td><font size=2>8650</font></td>
     <td><font size=2>9955</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>150</font></td>
@@ -157,7 +158,7 @@
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>9700</font></td>
+    <td><font size=2>10250</font></td>
     <td><font size=2>10655</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>250</font></td>
