--- a/thousand.html
+++ b/thousand.html
@@ -765,6 +765,12 @@
     <td>1045</td>
     <td>Mike</td>
     <td>775</td></tr>
+<tr><td>2021</td>
+    <td>Week 17</td>
+    <td>Steven Cohen</td>
+    <td>1045</td>
+    <td>-</td>
+    <td>-</td></tr>
 <tr><td>2002</td>
     <td>Week 4</td>
     <td>John Heinzelmann</td>
